fixing banner/nav gap with yield

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,7 +57,7 @@ svg:hover {
 
 .container {
 	
-	margin: 50px 40px auto 40px;
+	// margin: 50px 40px auto 40px;
 	padding: 10px;
 
 }
@@ -243,6 +243,26 @@ div.title {
 #map {
 	width: 100%;
 }
+
+.banner {
+  width: 100%;
+  height: 400px;
+  margin-bottom: -80px;
+  background-image: image-url('foods.jpg');
+  background-size: cover;
+  background-position: 0px -72px;
+  font-size: 2em;
+
+}
+
+.banner h1 {
+  position: absolute;
+  top:120px;
+  left: 25%;
+  color: white;
+  text-shadow: 3px 3px 0 #0199d9 , 4px 4px 0 #0199d9 , 5px 5px 0 #0199d9 , 6px 6px 0 #0199d9 , 7px 7px 0 #0199d9 , 8px 8px 0 #0199d9 , 9px 9px 0 #0199d9 , 10px 10px 0 #0199d9 , 11px 11px 0 #0199d9 , 12px 12px 0 #0199d9 , 13px 13px 0 #0199d9 , 14px 14px 0 #0199d9 , 15px 15px 0 #0199d9 , 16px 16px 0 #0199d9 , 17px 17px 0 #0199d9 , 18px 18px 0 #0199d9 , 19px 19px 0 #0199d9 , 20px 20px 0 #0199d9;
+}
+
 /*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /*FORMS*/
 /*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
@@ -251,7 +271,7 @@ div.title {
     margin-left:auto;
     margin-right:auto;
     margin-bottom: 10px;
-    margin-top: 20px;
+    
     max-width: 700px;
     background: #F7F7F7;
     padding: 25px 15px 25px 10px;
